# Arduinify-Now-Playing

./: .gitignore  Data.py  Data2Arduino.ino  LICENSE  README.md  pyproject.toml  requirements.txt
